Add util to replace http to https

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -32,5 +32,8 @@
     "WonPlayerA": "Player A won",
     "WonPlayerB": "Player B won",
     "Draw": "Draw"
+  },
+  "Error": {
+    "FetchData": "Error"
   }
 }
